# iadz

./: .gitignore  Makefile  README.md  package.json  release.sh  requirement.txt  requirements.txt  setup.py  tsconfig.json
python/: pyproject.toml  setup.py
python/src/iadz/built_in/abc/: requestor.py
python/src/iadz/built_in/argparse/: parser_demo.py  use_tqdm.py
python/src/iadz/built_in/async/: await_obj.py  coroutine_demo.py  example.py  execute_coroutine.py  normal_async_compare.py
python/src/iadz/built_in/asyncio/: async_demo.py  demo.py  eventlet_tutorial.py  normal_async_compare.py
python/src/iadz/built_in/class/: binary_tree_demo.py  interface.py  lazy_property.py  linklist_demo.py  mixins.py  property_in_class.py  queue_demo.py  stack_demo.py
python/src/iadz/built_in/datetime/: filter_property_by_timezone.py  get_timezones.py  time_from_str.py  utc_datetime.py
python/src/iadz/built_in/decorator/: catch_and_dispatch.py  dispatcher_queue.py  rollback_once_failed.py  validate_input.py
python/src/iadz/built_in/dict/: calculate_hash.py  convert_dict_to_str.py  dict_as_argument.py  dict_clear.py  dict_format_map.py  filter_by_defaultdict.py  get_changed_fields.py  order_dict.py  return_in_circle.py  sort_by_value.py  sum_item_in_list.py  test_convert.py  use_default_dict.py  use_dict_replace_if_else.py  zip_create_dict.py
python/src/iadz/built_in/enum/: compare_enum_item.py  get_enum_value_in_dict.py  load_enum_field.py  multi_enums.py
python/src/iadz/built_in/exception/: catch.py  trigger_exception.py
python/src/iadz/built_in/function/: closure.py  (+4 more)
(+356 files in other folders)
