[tool.poetry]
name = "iamdavidzeng"
version = "0.1.0"
description = "Personal directory for python tutorial."
authors = ["iamdavidzeng <iamdavidzeng@163.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alembic = "^1.7.3"
requests = "^2.26.0"
SQLAlchemy = "^1.4.23"
nameko = "3.0.0-rc8"
marshmallow = "^3.13.0"
mysql-connector-python = "^8.0.26"
elasticsearch-dsl = ">=7.0.0,<8.0.0"
redis = "^3.5.3"
pycountry = "^20.7.3"
SQLAlchemy-Utils = "^0.37.8"
sshtunnel = "^0.4.0"
boto3 = "^1.18.44"
pycryptodome = "^3.10.1"
tqdm = "^4.62.2"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"
mock = "^4.0.3"
behave = "^1.2.6"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
